# opendingux-controllermap-sdl2

./: CMakeLists.txt  README.md  build-opendingux.sh  controllermap.c  controllermap.sh  controllermap.xcf  default.gcw0.desktop  logo.xcf  readme.gcw0.txt
